# bot_Eva

./: .env.example  .replit  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  config.yaml.example  logger_config.py  main.py  pyproject.toml  pyproject_github.toml  replit.md  requirements_github.txt  setup.py  strategy.py
bot_Eva/: .gitignore  README.md  demo_bot.py  executor.py  indicators.py  pyproject.toml  risk_manager.py  telegram_notifier.py  utils.py
tests/: test_indicators.py  test_risk_manager.py  test_strategy.py
