[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance>=0.3.56",
    "cryptography>=45.0.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "python-binance>=1.0.29",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "ta>=0.11.0",
]
